fixes: wallpaper button visibility

--- a/src/global/_radio-button.scss
+++ b/src/global/_radio-button.scss
@@ -1,5 +1,5 @@
 // radio button
-input[type="radio"],
+input[type="radio"]:not(.wallpaper-input),
 .radio-check {
   display: inline-flex !important;
   align-items: center !important;
